--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,12 @@ duckdb_unittest_tempdir/
 testext
 test/python/__pycache__/
 .Rhistory
+
+# Dotfiles / dotdirs
+.*
+!.gitignore
+!.gitmodules
+!.editorconfig
+!.clang-format
+!.clang-tidy
+!.github
