--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -12,17 +12,63 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  test:
+    name: Run Tests
+    runs-on: ubuntu-latest
+    env:
+      GEN: ninja
+      TIDY_THREADS: 4
+    steps:
+      - uses: actions/checkout@v6
+        with:
+          fetch-depth: 0
+          submodules: 'true'
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update -y -qq
+          sudo apt-get install -y -qq build-essential cmake ninja-build ccache git linux-libc-dev flex bison libcurl4-openssl-dev libssl-dev libthrift-dev thrift-compiler
+
+      - name: Cache ccache
+        uses: hendrikmuhs/ccache-action@v1.2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build Spark seeder image with cache
+        uses: docker/build-push-action@v6
+        with:
+          context: ./test
+          file: ./test/Dockerfile.spark
+          tags: hive-metastore-test-spark-seeder:latest
+          load: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: Run tests
+        run: |
+          make -j$(nproc) test-all
+        env:
+          CMAKE_CXX_COMPILER_LAUNCHER: ccache
+          CMAKE_C_COMPILER_LAUNCHER: ccache
+          NINJA_STATUS: '[%f/%t %es] '
+
   duckdb-stable-build:
     name: Build extension binaries
-    uses: duckdb/extension-ci-tools/.github/workflows/_extension_distribution.yml@v1.4.4
+    needs: test
+    uses: ./.github/workflows/_extension_distribution.yml
     with:
       duckdb_version: v1.4.4
       ci_tools_version: v1.4.4
+      exclude_archs: "${{ github.event_name == 'pull_request' && 'wasm_mvp;wasm_eh;wasm_threads;windows_amd64_mingw;linux_arm64;linux_amd64_musl;osx_amd64;windows_arm64;' || 'wasm_mvp;wasm_eh;wasm_threads;windows_amd64_mingw;windows_amd64;windows_arm64;' }}"
+      vcpkg_commit: 84bab45d415d22042bd0b9081aea57f362da3f35
+      skip_tests: true
       extension_name: hive_metastore
+      extra_toolchains: "parser_tools"
 
-  code-quality-check:
+  code-format-check:
     name: Code Quality Check
-    uses: duckdb/extension-ci-tools/.github/workflows/_extension_code_quality.yml@v1.4.4
+    uses: ./.github/workflows/_extension_code_quality.yml
     with:
       duckdb_version: v1.4.4
       ci_tools_version: v1.4.4
