--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -60,7 +60,7 @@ jobs:
     with:
       duckdb_version: v1.4.4
       ci_tools_version: v1.4.4
-      exclude_archs: "${{ github.event_name == 'pull_request' && 'wasm_mvp;wasm_eh;wasm_threads;windows_amd64_mingw;linux_arm64;linux_amd64_musl;osx_amd64;windows_arm64;' || 'wasm_mvp;wasm_eh;wasm_threads;windows_amd64_mingw;windows_amd64;windows_arm64;' }}"
+      exclude_archs: "${{ github.event_name == 'pull_request' && 'wasm_mvp;wasm_eh;wasm_threads;windows_amd64_mingw;linux_arm64;linux_amd64_musl;osx_amd64;windows_amd64;windows_arm64;' || 'wasm_mvp;wasm_eh;wasm_threads;windows_amd64_mingw;windows_amd64;windows_arm64;' }}"
       vcpkg_commit: 84bab45d415d22042bd0b9081aea57f362da3f35
       skip_tests: true
       extension_name: hive_metastore
