--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -57,10 +57,10 @@ jobs:
   duckdb-stable-build:
     name: Build extension binaries
     needs: test
-    uses: ./.github/workflows/_extension_distribution.yml
+    uses: duckdb/extension-ci-tools/.github/workflows/_extension_distribution.yml@main
     with:
-      duckdb_version: v1.4.4
-      ci_tools_version: v1.4.4
+      duckdb_version: main
+      ci_tools_version: main
       exclude_archs: "${{ github.event_name == 'pull_request' && 'wasm_mvp;wasm_eh;wasm_threads;windows_amd64_mingw;linux_arm64;linux_amd64_musl;osx_amd64;windows_amd64;windows_arm64;' || 'wasm_mvp;wasm_eh;wasm_threads;windows_amd64_mingw;windows_amd64;windows_arm64;' }}"
       vcpkg_commit: 84bab45d415d22042bd0b9081aea57f362da3f35
       skip_tests: true
@@ -71,7 +71,7 @@ jobs:
     name: Code Quality Check
     uses: ./.github/workflows/_extension_code_quality.yml
     with:
-      duckdb_version: v1.4.4
-      ci_tools_version: v1.4.4
+      duckdb_version: main
+      ci_tools_version: main
       extension_name: hive_metastore
       format_checks: 'format;tidy'
